crates/coral-cli/tests/snapshots/envelope__open_clean.snap
---
source: crates/coral-cli/tests/envelope.rs
expression: out.json
---
{
  "schema": 1,
  "ok": true,
  "result": {
    "path": "[path]",
    "gitDir": "[gitdir]",
    "commonDir": "[commondir]",
    "isBare": false,
    "gitVersion": "[gitversion]",
    "head": {
      "kind": "branch",
      "name": "main"
    },
    "state": "clean",
    "commitGraph": false
  }
}
