crates/coral-cli/tests/snapshots/envelope__open_not_a_repository.snap
---
source: crates/coral-cli/tests/envelope.rs
expression: out.json
---
{
  "schema": 1,
  "ok": false,
  "error": {
    "code": "not_a_repository",
    "message": "[message]"
  }
}
