crates/coral-cli/tests/snapshots/envelope__version.snap
---
source: crates/coral-cli/tests/envelope.rs
expression: out.json
---
{
  "schema": 1,
  "ok": true,
  "result": {
    "coral": "[coralversion]",
    "git": "[gitversion]",
    "gitPath": "[gitpath]",
    "gitMinimum": "2.40.0"
  }
}
